# musicxml

./: .gitignore  ChangeLog.md  README.md  README.rst  Versions.md  intro_musicxml.rst  pyproject.toml  pytest.ini  requirements_for_tests.txt  setup.py  usage.rst
.github/workflows/: python-tests.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst
musicxml/: ChangeLog.md  Versions.md  __init__.py  pytest.ini
musicxml.egg-info/: PKG-INFO  SOURCES.txt
musicxml/generate_classes/: generate_all.py  generate_attributes.py  generate_complex_types.py  generate_indicators.py  generate_simple_types.py  generate_xml_elements.py
musicxml/generate_classes/defaults/: xmlelement.py  xsdattribute.py  xsdcomplextype.py  xsdindicator.py  xsdsimpletype1.py
musicxml/parser/: _test_parser.py  parser.py
musicxml/profiler/: parser_test.py  parser_test.txt  parser_test_create.xml
musicxml/tests/test_xmlelement/: test_child_container.py  test_deepcopy.py  test_pre_create_child_container.py  test_xml_element_lyric.py  test_xml_element_score.py  test_xml_elements.py  test_xml_error.py  test_xsd_false.py
musicxml/tests/test_xsd/: musicxml_4_0_summary.txt  test_xsd_complex_types.py  test_xsd_indicators.py  test_xsd_simple_types.py  test_xsd_tree.py
musicxml/tree/: test.py  tree.py
musicxml/util/: core.py
musicxml/xmlelement/: core.py  xmlchildcontainer.py  xmlelement.py
musicxml/xmlelement/tests/: test_child_container.py  (+4 more)
musicxml/xsd/: xsdattribute.py  xsdcomplextype.py  xsdelement.py  xsdindicator.py  xsdsimpletype.py  xsdtree.py
tree/: test.py  tree.py
(+1 files in other folders)
