[tool.poetry]
name = "musicxml"
version = "1.5"
description = "generating musicxml"
authors = ["Alex Gorji <aligorji@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alexgorji/musicxml.git"
repository = "https://github.com/alexgorji/musicxml.git"
keywords = ["music", "musicxml", "xml"] # Add relevant keywords
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
verysimpletree = "^0.1.5b0"

[tool.poetry.group.test.dependencies]
mypy = "^1.13.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
